# GrowFoundry

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE_PLUGIN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GITHUB_OAUTH_SETUP.md  LICENSE  README.md  SECURITY.md  docker-compose.dokploy.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.claude-plugin/: marketplace.json
.claude/skills/: README.md
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: e2e.yml  (+6 more)
backend/: package.json  test_secrets.ts  tsconfig.json  tsup.config.ts  vitest.config.ts
deploy/: Dockerfile.postgres  docker-deploy.md
docs/: _audit-2026-04-18.md  asset-guidelines.md  docs.json  growfoundry-instructions-sdk.md  introduction.mdx  mcp-setup.mdx  oauth-server.mdx  partnership.mdx  products.mdx  quickstart.mdx  showcase.mdx  vscode-extension.mdx
examples/: response-examples.md
examples/python-ml-experiment-tracker/: README.md  pyproject.toml
examples/python-ml-experiment-tracker/tracker/: __init__.py  cli.py  client.py  serve.py
examples/python-ml-experiment-tracker/tracker/static/: index.html
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
functions/: server.ts  worker-template.js
openapi/: ai.yaml  auth.yaml  deployments.yaml  email.yaml  functions.yaml  health.yaml  logs.yaml  metadata.yaml  payments.yaml  realtime.yaml  records.yaml  secrets.yaml  storage.yaml  tables.yaml
scripts/: update-mintlify-skill.sh
(+348 files in other folders)
